[package]
name = "myloader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
aptos-crypto.workspace = true
aptos-cached-packages.workspace = true
aptos-types.workspace = true
futures.workspace = true
reqwest.workspace = true
aptos-api-types.workspace = true
serde_json.workspace = true
urlencoding = "2.1.3"